--- a/src/app/list-todo/list-todo.component.html
+++ b/src/app/list-todo/list-todo.component.html
@@ -1,4 +1,7 @@
 <h1>My todos</h1>
+
+<div class="alert alert-success" *ngIf="message">{{message}}</div>
+
 <div class="container">
   <table class="table">
     <thead>
@@ -6,6 +9,8 @@
       <th>Description</th>
       <th>Target Date</th>
       <th>Is completed?</th>
+      <th>Update</th>
+      <th>Delete</th>
     </tr>
     </thead>
     <tbody>
@@ -13,6 +18,8 @@
       <td>{{todo.description}}</td>
       <td>{{todo.targetDate | date | uppercase}}</td>
       <td>{{todo.done}}</td>
+      <td><button (click)="handleUpdateTodo(todo.id)" class="btn btn-info">Update</button></td>
+      <td><button (click)="handleDeleteTodo(todo.id)" class="btn btn-danger">Delete</button></td>
     </tr>
     </tbody>
   </table>
