--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,3 +2,13 @@
 <div class="container">
   Welcome {{name}}. You can manage your todos <a routerLink="/todos">here</a>
 </div>
+
+<div class="container">
+  Click here to get a customized welcome message
+  <button (click)="handleWelcomeMessageWithParam()" class="btn btn-success">Get Welcome Message</button>
+</div>
+
+<div class="container" *ngIf="welcomeMessageFromService">
+  <h2>Your customized Welcome Message</h2>
+  {{welcomeMessageFromService}}
+</div>
