--- a/src/app/list-todo/list-todo.component.html
+++ b/src/app/list-todo/list-todo.component.html
@@ -18,9 +18,16 @@
       <td>{{todo.description}}</td>
       <td>{{todo.targetDate | date | uppercase}}</td>
       <td>{{todo.done}}</td>
-      <td><button (click)="handleUpdateTodo(todo.id)" class="btn btn-info">Update</button></td>
-      <td><button (click)="handleDeleteTodo(todo.id)" class="btn btn-danger">Delete</button></td>
+      <td>
+        <button (click)="handleUpdateTodo(todo.id)" class="btn btn-info">Update</button>
+      </td>
+      <td>
+        <button (click)="handleDeleteTodo(todo.id)" class="btn btn-danger">Delete</button>
+      </td>
     </tr>
     </tbody>
   </table>
+  <div class="row">
+    <button (click)="handleAddTodo()" class="btn btn-success">Add</button>
+  </div>
 </div>
