--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,21 +1,39 @@
 <h1>Todo</h1>
 
 <div class="container">
-  <fieldset class="form-group">
-    <label for="description">Description</label>
-    <input type="text" [(ngModel)]="todo.description" name="description" id="description" required="required"
-           class="form-control">
-  </fieldset>
+  <div class="alert alert-warning" *ngIf="todoForm.dirty && todoForm.invalid">Enter valid values</div>
+  <div class="alert alert-danger" *ngIf="todoForm.dirty && targetDate.invalid">Enter valid target date</div>
+  <div class="alert alert-danger" *ngIf="todoForm.dirty && description.invalid">Enter at least 5 character in
+    description
+  </div>
+</div>
 
-  <fieldset class="form-group">
-    <label for="target_date">Target Date</label>
-    <input type="date"
-           [ngModel]="todo.targetDate | date:'yyyy-MM-dd'"
-           (ngModelChange)="todo.targetDate = $event"
-           name="target_date" id="target_date"
-           required="required"
-           class="form-control">
-  </fieldset>
+<div class="container">
+  <form (ngSubmit)="!todoForm.invalid && handleSaveTodo()" #todoForm="ngForm">
+    <fieldset class="form-group">
+      <label for="description">Description</label>
+      <input type="text"
+             [(ngModel)]="todo.description"
+             name="description"
+             id="description"
+             required="required"
+             class="form-control"
+             #description="ngModel"
+             minlength="5">
+    </fieldset>
 
-  <button class="btn btn-success" (click)="handleSaveTodo()">Save</button>
+    <fieldset class="form-group">
+      <label for="target_date">Target Date</label>
+      <input type="date"
+             [ngModel]="todo.targetDate | date:'yyyy-MM-dd'"
+             (ngModelChange)="todo.targetDate = $event"
+             name="target_date"
+             id="target_date"
+             #targetDate="ngModel"
+             required="required"
+             class="form-control">
+    </fieldset>
+
+    <button type="submit" class="btn btn-success">Save</button>
+  </form>
 </div>
